kustomize/bases/httpbin/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin
  labels:
    istio-injection: enabled
